<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/text_cancel"
        style="@style/wrap"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        android:layout_marginStart="10dp"
        android:textColor="#FF21A2F5"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/login_title"
        style="@style/wrap"
        android:layout_below="@+id/text_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="37dp"
        android:text="@string/register"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/login_left"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_title"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="1dp"
        android:paddingTop="15dp"
        android:textColor="@color/black" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/login_left"
        android:background="@color/grey_linear_bg" />

    <TextView
        android:id="@+id/phone_head"
        style="@style/left_name"
        android:layout_below="@id/line1"
        android:text="@string/user_name" />

    <View
        android:id="@+id/line2"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/phone_head"
        android:layout_alignTop="@id/phone_head"
        android:layout_toEndOf="@id/login_left"
        android:background="@color/grey_linear_bg" />

    <EditText
        android:id="@+id/userName"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_below="@id/line1"
        android:layout_toEndOf="@id/line2"
        android:hint="@string/input_name"
        android:maxLength="11" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/line2"
        android:background="@color/grey_linear_bg" />

    <TextView
        android:id="@+id/pass_head"
        style="@style/left_name"
        android:layout_below="@id/line2"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:labelFor="@id/pass_head"
        android:text="@string/pass" />
    <EditText
        android:id="@+id/passWord"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_below="@id/line3"
        android:layout_toEndOf="@id/line2"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:maxLength="16" />


    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/passWord"
        android:background="@color/grey_linear_bg" />
    <TextView
        android:id="@+id/re_pass_head"
        style="@style/left_name"
        android:layout_below="@id/line4"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:labelFor="@id/pass_head"
        android:text="@string/rePass" />

    <EditText
        android:id="@+id/rePassWord"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_below="@id/line4"
        android:layout_toEndOf="@id/line2"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:maxLength="16" />


    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rePassWord"
        android:background="@color/grey_linear_bg" />
    <View
        android:id="@+id/line_"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/phone_head"
        android:layout_alignBottom="@id/line5"
        android:layout_toEndOf="@id/login_left"
        android:background="@color/grey_linear_bg" />

    <Button
        android:id="@+id/register"
        style="@style/match_wrap"
        android:layout_below="@id/line5"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg_blue"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>